hphp/test/quick/Xhp2.php.expectf

Fatal error: XHP: mismatched tag: 'li' not the same as 'ul' in %s on line 3
